[project]
name = "om-editor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docxtpl>=0.20.2",
    "mammoth>=1.12.0",
    "pydantic>=2.13.4",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "streamlit>=1.57.0",
    "xhtml2pdf>=0.2.17",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.pyright]
include = ["."]
extraPaths = ["."]
